--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html{
 
 body{
 	font-family: 'Catamaran', sans-serif;
-	background: url("../images/universe.jpg");
+	background: url("https://images.pexels.com/photos/1624438/pexels-photo-1624438.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260");
 	background-size: cover;
 	background-position: center;
 }
